<resources>
    <string name="app_name">Map</string>

    <string name="title_main">高德定位SDK功能展示</string>
    <string name="title_battery_saving">低功耗模式功能展示</string>
    <string name="title_device_sensors">仅设备模式功能展示</string>
    <string name="title_hight_accuracy">高精度模式功能展示</string>
    <string name="title_lastLocation">最后位置功能展示</string>
    <string name="title_geoFenceAlert">地理围栏功能展示</string>
    <string name="title_assistantLocation">H5辅助定位展示</string>
    <string name="title_alarmCPU">定时唤起CPU示例</string>

    <string name="battery_saving">低功耗模式</string>
    <string name="battery_saving_dec">仅使用高德网络定位，耗电量最低</string>
    <string name="battery_saving_info">低功耗模式</string>

    <string name="device_sensors">仅设备模式</string>
    <string name="device_sensors_dec">无需网络连接，使用手机GPS模块定位，室外定位精度高，室内定位成功率低，耗电量高</string>

    <string name="hight_accuracy">高精度模式</string>
    <string name="hight_accuracy_dec">同时使用GPS和高德网络定位，优先返回精度高的定位结果，定位精度高，耗电量低</string>

    <string name="lastLocation">最后位置</string>
    <string name="lastLocation_dec">获取最后一次定位的位置，此位置是一个历史位置</string>

    <string name="geoFenceAlert">地理围栏</string>
    <string name="geoFenceAlert_dec">可以设置对进入或离开区域进行提醒</string>

    <string name="assistantLocation">H5辅助定位</string>
    <string name="assistantLocation_dec">展示H5辅助定位功能</string>

    <string name="alarmCPU">定时唤起cpu</string>
    <string name="alarmCPU_dec">通过一个闹钟程序后台定时唤起cpu</string>

    <string name="location_contiue">持续定位</string>
    <string name="location_once">单次定位</string>

    <string name="alarmInterval">唤醒周期</string>
    <string name="interval">定位周期</string>

    <string name="millsecond">毫秒</string>
    <string name="second">秒</string>
    <string name="minute">分钟</string>
    <string name="needAddress">逆地理编码</string>
    <string name="gpsFirst">GPS优先</string>

    <string name="startLocation">开始定位</string>
    <string name="stopLocation">停止定位</string>


    <string name="getLastLocation">获取最后位置</string>

    <string name="fenceRadius">围栏半径</string>
    <string name="meter">米</string>
    <string name="alertIn">进入提醒</string>
    <string name="alertOut">离开提醒</string>

    <string name="addFence">添加围栏</string>
    <string name="removeFence">移除围栏</string>

    <string name="startAssistantLocation">启动H5辅助定位</string>
    <string name="stopAssistantLocation">停止H5辅助定位</string>
    <string name="urlLocation">浏览器定位</string>
    <string name="assistantLocationInfo">辅助定位已经启动，请点击模拟浏览器请求或者在浏览器中输入http://127.0.0.1:43689/进行测试</string>

    <string name="defaultInteval">30</string>

    <string name="animate">Animate</string>
    <string name="basic_map">基本地图</string>
    <string name="basic_description">介绍如何创建一个基本地图</string>
    <string name="osm_map">OSM地图</string>
    <string name="osm_description">介绍如何替换高德底图,显示诸如osm之类的底图</string>
    <string name="base_fragment_map">SupportMapFragment创建地图</string>
    <string name="base_fragment_description">介绍SupportMapFragment方式创建地图</string>
    <string name="camera_demo">Camera功能</string>
    <string name="camera_description">介绍在地图中操作Camera各种功能</string>
    <string name="clear_map">Clear</string>
    <string name="compass">指南针</string>
    <string name="custom_info_contents">Custom info contents</string>
    <string name="custom_info_window">Custom info window</string>
    <string name="default_info_window">Default info window</string>
    <string name="demo_title">AMaps2D  Demos</string>
    <string name="down_arrow">\u2193</string>
    <string name="drag_melbourne">Drag Melbourne</string>
    <string name="events_demo">Events功能</string>
    <string name="events_description">介绍对地图的点击，长按，拖动地图事件功能</string>
    <string name="fill_stroke">Fill Stroke</string>
    <string name="fill_color">Fill Color</string>
    <string name="go_to_zhongguancun">中关村</string>
    <string name="go_to_lujiazui">陆家嘴</string>
    <string name="hybrid">Hybrid</string>
    <string name="location">正在定位中</string>

    <string-array name="layers_array">
        <item>@string/normal</item>
        <item>@string/satellite</item>
    </string-array>

    <string name="layers_demo">Layers图层功能</string>
    <string name="layers_description">介绍地图分别以正常、卫星模式展示出</string>
    <string name="left_arrow">\u2190</string>
    <string name="locationsource_demo">Location小蓝点功能</string>
    <string name="locationsource_description">介绍对系统定位显示小蓝点功能</string>
    <string name="locationGPS_demo">gps定位功能</string>
    <string name="locationGPS_description">介绍如何使用gps定位</string>
    <string name="locationSensorGPS_demo">gps追随功能</string>
    <string name="locationSensorGPS_demo_description">介绍如何用gps定位图标箭头随手机转动而转动</string>
    <string name="locationNetwork_description">介绍如何使用网络定位</string>
    <string name="locationNetwork_demo">网络定位功能</string>
    <string name="marker_demo">Markers功能</string>
    <string name="marker_description">介绍在地图上添加marker和infoWindow</string>
    <string name="mapOption_demo">AMapOptions实现地图</string>
    <string name="mapOption_description">介绍用AMapOptions展示一个地图</string>
    <string name="map_not_ready">SupportMapFragment初始化失败</string>
    <string name="move_the_camera">移动camera</string>
    <string name="my_location">My Location</string>
    <string name="mylocation_layer">我的位置图层</string>
    <string name="no_demos">No demos</string>
    <string name="normal">Normal</string>
    <string name="polygon_demo">Polygons功能</string>
    <string name="polygon_description">介绍在地图绘制多边形</string>
    <string name="polyline_demo">Polylines功能</string>
    <string name="polyline_description">介绍在地图中绘制线条</string>
    <string name="groundoverlay_demo">GroundOverlay功能</string>
    <string name="groundoverlay_description">介绍在地图中绘制GroundOverlay功能</string>
    <string name="circle_demo">Circles功能</string>
    <string name="circle_description">介绍在地图中绘制圆形</string>
    <string name="screenshot_demo">地图截屏功能</string>
    <string name="screenshot_description">介绍对地图进行截屏</string>
    <string name="properties_polyline">设置Polyline属性</string>
    <string name="properties_polygon">设置Polygon属性</string>
    <string name="properties_circle">设置Circle属性</string>
    <string name="busline_demo">Busline公交查询</string>
    <string name="busline_description">介绍如何在地图中绘制BusLine</string>
    <string name="route_demo">Route路径规划</string>
    <string name="route_description">介绍如何在地图中绘制Route</string>
    <string name="rotate">旋转手势</string>
    <string name="reset_map">Reset</string>
    <string name="right_arrow">\u2192</string>
    <string name="satellite">Satellite</string>
    <string name="scroll">滑动手势</string>
    <string name="stop_animation">\u25A0</string>
    <string name="stroke_width">Stroke Width</string>
    <string name="tap_instructions">点击或者长按地图</string>
    <string name="terrain">Terrain</string>
    <string name="tilt">倾斜手势</string>
    <string name="traffic">Traffic</string>
    <string name="transparency">Transparency</string>
    <string name="uisettings_demo">UI Settings功能</string>
    <string name="uisettings_description">介绍地图中UI Settings功能</string>
    <string name="geocoder_demo">地理编码 功能</string>
    <string name="geocoder_description">介绍 geocoder地理编码 功能</string>
    <string name="poikeywordsearch_demo">poi关键字搜索</string>
    <string name="poikeywordsearch_description">介绍poi关键字搜索功能</string>
    <string name="poiaroundsearch_demo">poi周边搜索</string>
    <string name="poiaroundsearch_description">介绍poi周边搜索功能</string>
    <string name="offlinemap_demo">离线地图功能</string>
    <string name="offlinemap_description">介绍如何使用离线地图</string>
    <string name="search_title">搜索关键字</string>
    <string name="up_arrow">\u2191</string>
    <string name="width">Width</string>
    <string name="zoom_buttons">缩放按钮</string>
    <string name="zoom_gestures">缩放手势</string>
    <string name="zoom_in">+</string>
    <string name="zoom_out">-</string>
    <string name="scale">比例尺</string>
    <string name="buttonScale">获取比例尺</string>
    <string name="logo_position">logo位置</string>
    <string name="bottom_left">左下</string>
    <string name="bottom_center">底部居中</string>
    <string name="bottom_right">右下</string>
    <string name="map_screenshot">地图截屏</string>
    <string name="error_network">搜索失败,请检查网络连接！</string>
    <string name="error_key">key验证无效！</string>
    <string name="error_other">未知错误，请稍后重试!错误码为</string>
    <string name="no_result">对不起，没有搜索到相关数据！</string>
    <string name="district_demo">行政区划查询</string>
    <string name="district_description">政区划查询功能演示</string>
    <string name="district_boundary_demo">行政区划边界查询</string>
    <string name="district_boundary_description">政区划查询功能返回边界演示</string>
    <string name="share_demo">短串分享</string>
    <string name="share_description">短串分享功能演示</string>
    <string name="cloud_demo">云图搜索</string>
    <string name="cloud_description">介绍云图搜索功能</string>
    <string name="province">省</string>
    <string name="city">市</string>
    <string name="district">区/县</string>
    <string name="location_share">位置分享</string>
    <string name="route_share">路径规划分享</string>
    <string name="poi_share">POI分享</string>
    <string name="navi_share">导航分享</string>
    <string name="cloud_id_search">ID搜索</string>
    <string name="cloud_arround_search">周边搜索</string>
    <string name="cloud_polygon_search">多边形搜索</string>
    <string name="cloud_local_search">本地搜索</string>
    <string name="cloud_base_field">基本字段</string>
    <string name="cloud_id">POI ID(_id)</string>
    <string name="cloud_item_name">名称(_name)</string>
    <string name="cloud_latlon">经纬度(_location)</string>
    <string name="cloud_address">地址(_address)</string>
    <string name="cloud_item_createtime">创建时间(_createtime)</string>
    <string name="cloud_item_updatetime">更新时间(_updatetime)</string>
    <string name="cloud_item_distance">距Center距离(_distance)</string>
    <string name="cloud_item_identify">自定义字段</string>
    <string name="weather_demo">天气查询</string>
    <string name="weather_description">天气预报功能</string>
    <string name="abroad_demo">国内外地图切换</string>
    <string name="abroad_description">实现国内国外地图无缝切换</string>
    <string name="subpoi_demo">POI父子关系</string>
    <string name="subpoi_description">介绍POI的父子关系功能</string>
    <string name="weather_live">实时</string>
    <string name="weather_forecast">预报</string>
    <string name="report_time">发布时间</string>
    <string name="sydney">悉尼</string>
    <string name="beijing">北京</string>

    <string name="heatmap_demo">热力图功能</string>
    <string name="heatmap_description">介绍在地图中如何绘制热力图</string>
    <string name="poiclick_demo">地图Poi点击功能</string>
    <string name="poiclick_description">介绍地图底图poi点击事件和处理</string>
    <string name="opengl_demo">Opengl接口功能</string>
    <string name="opengl_description">介绍地图中开放Opengl接口功能</string>
    <string name="arc_demo">Arc功能</string>
    <string name="arc_description">介绍在地图中绘制弧形</string>

    <string name="night_mode">Night</string>
    <string name="navi_mode">Navi</string>

    <string name="navigatearrow_demo">NavigateArrow功能</string>
    <string name="navigatearrow_description">介绍如何在地图中绘制导航指示箭头功能</string>
    <string name="locationmodesource_demo">Location三种模式</string>
    <string name="locationmodesource_description">介绍定位、追随、选择不同模式使用</string>
    <string name="touch_the_map">地图触摸事件</string>
    <string name="buildings">Buildings</string>
    <string name="maptext">MapText</string>

    <string name="zoom_position">zoom显示及位置</string>
    <string name="center_right">右中</string>

    <string name="gpsfollow">追随</string>
    <string name="gpslocate">定位</string>
    <string name="gpsrotate">旋转</string>

    <string name="all_offline">所有城市</string>
    <string name="download_offline">下载管理</string>

</resources>
